# training-cmake

./: CMakeLists.txt  README.md
add_custom_target/: CMakeLists.txt  main.cpp
add_library/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp
add_test/: CMakeLists.txt  add_5_plus_7.cpp
fetch_content/: CMakeLists.txt  main.cpp
git_hash/: CMakeLists.txt  git_hash.cpp.in  git_hash.hpp  main.cpp
hello/: CMakeLists.txt
pch/: CMakeLists.txt  pch.cpp  pch.hpp
use_boost/: CMakeLists.txt  main.cpp
